accounts/conprodwsjapac/tokyo/aws-rc-datagen.tf
// CT-15538
resource "aws_key_pair" "aws_rc_datagen_key" {
  key_name   = "aws_rc_datagen_key"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDvFIrPz7DNwnVVl3XKd6trWoaRhIpo4xLYQO9G00PmWkRpssDZuDGwEeyVnGkV2R3h56ojIcQxeRa74s16+Drpu6Gf8OcbQvI0M+Z1EGVCd+R/DMxBfNGBJt33t1FIAh+xnqF5XxFdqvGpHKeLsHAEZs7zNAZHO09g6OSL5ivisjGIpOqyL3W2NGljj2ihYTYP3lr5TG52Gw5jpbXEtHTP+KHODfZxh79shFbo/q5aD11rU3sgMTO4jQIks0R5e4nzLcajG3kBVqcFfLX68cyT4ZWMQ4h21rdmUmgC2ZtNcMMtigANRvV86wCDcA3MgfJnnH+Eq9brGf+wZvlIfpxv6rTk9FisRx3ikBQNWNLvFYw+pHKLR61UWKBwoAUx1NRcdH/8qpjroyWADIVAffNcOXADSONuEep3b2ZWQatYoj6ZNDnTuOnC7qfm2hMt [...]
}


resource "aws_volume_attachment" "aws-rc-datagen" {
  count       = 4
  device_name = "/dev/sdd"
  volume_id   = element(aws_ebs_volume.aws-rc-datagen.*.id, count.index)
  instance_id = element(aws_instance.aws-rc-datagen.*.id, count.index)
}

resource "aws_ebs_volume" "aws-rc-datagen" {
  count             = 4
  availability_zone = aws_instance.aws-rc-datagen[count.index].availability_zone

  type = "gp3"
  size = 300

  tags = {
    Name        = "${var.aws_rc_datagen_name}${count.index + 1}/dev/sdd"
    bu          = var.TagBU
    owner       = var.TagOwner
    environment = var.TagEnv
    product     = var.TagProduct
    component   = var.TagComponent
    servicename = var.TagServiceName
    appid       = "in_platform_randc_datagenjapan"
    autosnap    = "bkp=g"
  }
}

resource "aws_instance" "aws-rc-datagen" {
  count                  = 4
  ami                    = data.aws_ami.win_image.image_id
  instance_type          = var.aws_rc_datagen_instance_type
  key_name               = aws_key_pair.aws_rc_datagen_key.id
  subnet_id              = count.index % 2 == 0 ? tolist(data.aws_subnets.pro_a.ids)[0] : tolist(data.aws_subnets.pro_c.ids)[0]
  vpc_security_group_ids = [data.aws_security_group.djif_default.id, data.aws_security_group.djif-infrastructure-tools.id, aws_security_group.djif-datagen-sg.id]
  availability_zone      = element(["ap-northeast-1a", "ap-northeast-1c"], count.index % 2)

  root_block_device {
    volume_size = var.root_v_size_200
    volume_type = var.root_v_type
    tags = {
      Name        = "${var.aws_rc_datagen_name}${count.index + 1}-root"
      bu          = var.TagBU
      owner       = var.TagOwner
      environment = var.TagEnv
      product     = var.TagProduct
      component   = var.TagComponent
      servicename = var.TagServiceName
      appid       = "in_platform_randc_datagenjapan"
    }
  }

  tags = {
    Name        = "${var.aws_rc_datagen_name}${count.index + 1}"
    bu          = var.TagBU
    owner       = var.TagOwner
    environment = var.TagEnv
    product     = var.TagProduct
    component   = var.TagComponent
    servicename = var.TagServiceName
    appid       = "in_platform_randc_datagenjapan"
    preserve    = true
    autosnap    = "bkp=o"
  }
}
